--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,28 @@ __pycache__/
 *.pyo
 *.pyd
 
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Environments
+env/
+venv/
+.venv/
+.env
+
+# Database
+*.db
+instance/
+
 # Logs
 logs/
 *.log
 
-# Environment files
-.env
+# OS
+.DS_Store
+Thumbs.db
 
-# Banco de dados
-*.db
-
-# Migration files
-migrations/
+# Documentation
+# screenshots/ (Manter screenshots no repo para o README)
